--- a/Repaso1.html
+++ b/Repaso1.html
@@ -10,6 +10,7 @@
       </title>
 
       <script language="javascript">
+          //HACER UNA PÁGINA QUE OBTENGA UN STRING Y UNA LETRA DEL USUARIO Y DIGA SI CON UN ALERT SI ESA LETRA PERTENECE AL STRING O NO 
         function comparar()
         {
             var frase = document.getElementById("frase").value;
