--- a/Repaso2.html
+++ b/Repaso2.html
@@ -10,6 +10,7 @@
       </title>
 
       <script language="javascript">
+          //HACER UNA PÁGINA OBTENGA UN STRING Y UNA LETRA DEL USUARIO Y DIGA CUÁNTAS VECES APARECE ESE LETRA EN LA CADENA 
         function comparar()
         {
             var frase = document.getElementById("frase").value;
