--- a/3Indice MasaCorporal.html
+++ b/3Indice MasaCorporal.html
@@ -62,6 +62,7 @@
    <body>
        <h4>Pon tu peso</h4>
         <input type="text" id="peso"><br><br>
+        <h4>Pon tu altura</h4>
         <input type="text" id="altura"><br><br>
         <button onclick="calcularIMC();">Calcular IMC</button><br><br>
         <img id= "res"></img>
