--- a/5descubriendoparejas.html
+++ b/5descubriendoparejas.html
@@ -5,31 +5,25 @@
         WEB CON JS
     </title>
     <link rel="stylesheet" type="text/css" href="estilo2.css">
-    <script src="easytimer.js"></script>
-    <script>
-        var timerInstance = new Timer();
-    </script>
-
+    <script src="https://albert-gonzalez.github.io/easytimer.js/dist/easytimer.min.js"></script>
     <script language="javascript">
         window.onload = iniciarTablero;
+        var reloj; 
         var imagen_tocada = false;
-        var primer_img_tocada;
-        var segunda_imagen_tocada;
+        var primer_img_tocada; var segunda_imagen_tocada;
         var num_aciertos = 0;//representa el número de aciertos que lleva el usuario
         const TOTAL_ACIERTOS = 2;//número de aciertos totales para dar por concluido el juego
         var abierto = true;
 
-        function actualizarReloj ()
+        function actualizarReloj()
         {
-            timer.addEventListener('secondsUpdated', function (e) 
-            {
-                $('#basicUsage').html(timer.getTimeValues().toString());
-            }
+            reloj.addEventListener('secondsUpdated', function (e) {
+                document.getElementById("tiempo").innerHTML = reloj.getTimeValues().toString();
+            });
         }
-
         function iniciarTablero() {
             console.log("Inicia Tablero . . .");
-            var reloj = new Timer();
+            
             //Asignar los listeners
             var td_actual;
             var hijo_img;
@@ -45,7 +39,7 @@
             //Ocultar las imágenes
             reloj = new Timer();
             reloj.start();
-
+            actualizarReloj();
         }
 
         function tocadoImagen(evento) {
@@ -76,13 +70,16 @@
                         if (num_aciertos == TOTAL_ACIERTOS) {
                             console.log("Ha ganado");
                             //alert ("Has ganado socio, ENHORABUENA");
-                            location.href = "http://www.cnn.com";
+                            reloj.stop();
+                            //location.href = "http://www.cnn.com";
+                            
                         }
 
                     } else {
                         console.log("FALLO, las tapo");
                         abierto = false;
-                        setTimeout(function () { voltear(primer_img_tocada, segunda_imagen_tocada) }, 900);
+                        setTimeout(function(){ voltear(primer_img_tocada, segunda_imagen_tocada) } , 
+                        900);
                     }
 
                 }
@@ -97,35 +94,25 @@
 </head>
 
 <body>
-    <div>
-        <table>
-            <tr>
-                <td>
-                    <img src="DELGADO.jpg">
-                </td>
-                <td>
-                    <img src="pantera.jpg">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="DELGADO.jpg">
-                </td>
-                <td>
-                    <img src="pantera.jpg">
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div id="chronoExample">
-        <div class="values">00:00:00</div>
-        <div>
-            <button class="startButton">Start</button>
-            <button class="pauseButton">Pause</button>
-            <button class="stopButton">Stop</button>
-            <button class="resetButton">Reset</button>
-        </div>
-    </div>
+    <table>
+        <tr>
+            <td>
+                <img src="delgado.jpg">
+            </td>
+            <td>
+                <img src="pantera.jpg">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="delgado.jpg">
+            </td>
+            <td>
+                <img src="pantera.jpg">
+            </td>
+        </tr>
+    </table>
+    <div id="tiempo"></div>
 </body>
 
 </html>
