--- a/14AAPIiTUNES.html
+++ b/14AAPIiTUNES.html
@@ -11,7 +11,7 @@
         var l_canciones;//string
 
         function recogerDatos() {
-            if (xmlHttp.readyState == 4) {
+            if (xmlHttp.readyState == 4 && ) {
                 l_canciones = JSON.parse(xmlHttp.responseText);//Desserializar
                 console.log(l_canciones);
 
