--- a/9BorrarElemetoDeTabla.html
+++ b/9BorrarElemetoDeTabla.html
@@ -3,8 +3,8 @@
 2) Inserto el array
 3) Inserto una fila en la tabla
 -->
-
-<html>
+<!DOCTYPE html>
+<meta charset="UTF-8"></meta>
 
 <head>
     <title>
